// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Happy Path for Jsii sub project sub project has docs docs index 1`] = `
"<!DOCTYPE html>
<html>
<body>
  <ul>
    <li>
      <a href=\\"packages/test-sub-project/API.md\\">
        test-sub-project
      </a>
    </li>
  </ul>
</body>
</html>
"
`;

exports[`Happy Path for Jsii sub project sub project has docs docs index 2`] = `"- ## [test-sub-project](packages/test-sub-project/API.md)"`;

exports[`docgen set to true multiple sub-projects 1`] = `
"<!DOCTYPE html>
<html>
<body>
  <ul>
    <li>
      <a href=\\"packages/test-sub-project-1/API.md\\">
        test-sub-project-1
      </a>
    </li>
    <li>
      <a href=\\"packages/test-sub-project-2/index.html\\">
        test-sub-project-2
      </a>
    </li>
    <li>
      <a href=\\"packages/test-sub-project-4/API.md\\">
        test-sub-project-4
      </a>
    </li>
  </ul>
</body>
</html>
"
`;

exports[`docgen set to true multiple sub-projects 2`] = `
"- ## [test-sub-project-1](packages/test-sub-project-1/API.md)
- ## [test-sub-project-4](packages/test-sub-project-4/API.md)"
`;

exports[`docgen set to true sub project has docs docs index 1`] = `
"<!DOCTYPE html>
<html>
<body>
  <ul>
    <li>
      <a href=\\"packages/test-sub-project/index.html\\">
        test-sub-project
      </a>
    </li>
  </ul>
</body>
</html>
"
`;

exports[`docgen set to true sub project has docs docs index 2`] = `""`;
